# cicd_test_tiffviewer

./: CMakeLists.txt  ConstValues4Tags.h  form.ui  header.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-installer-noninteractive.qs  tagsviewform.cpp  tagsviewform.h  tagsviewform.ui
.github/workflows/: ci.yml
